--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ main{
     margin: auto;
     background-color: rgba(251, 251, 251, 1);
     border-radius: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .input-container{
