--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ h1{
 .raise-bar-text{
     font-size: 14px;
     color: rgba(133, 133, 133, 1);
+    position: relative;
+    display: flex;
+    justify-content:space-between;
 }
 
 .alert{
@@ -49,6 +52,14 @@ h1{
   align-items: center;
   gap: 1rem;
   margin-bottom: 1.75rem;
+}
+
+
+
+.resetAll{
+    color: red;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .bar{
@@ -69,13 +80,15 @@ h1{
     background-color: rgba(72, 163, 0, 1);
     border-radius: 15px;
     color:rgba(238, 255, 224, 1);
-    /* color: red; */
     font-size: 10px;
     display: flex;
     align-items: center;
-    /* padding-inline-start: 1.5rem; */
-    /* padding-left: 5rem; */
     transition: all 0.5s ease;
+}
+
+.show-completed .status{
+    padding-left: 1.5rem;
+    min-width: max-content;
 }
 
 main{
@@ -83,7 +96,8 @@ main{
     padding: 1rem;
     max-width: 660px;
     margin: auto;
-    background-color: rgba(251, 251, 251, 1);
+    margin-bottom: 2rem;
+    background-color: rgb(250, 249, 249);
     border-radius: 15px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
@@ -94,7 +108,7 @@ main{
     display: flex;
     align-items: center;
     padding-inline-start: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.75rem;
     background-color: white;
 }
 
@@ -127,7 +141,7 @@ main{
 }
 
 .input-container{
-    height: 82px;
+    height: 70px;
 }
 
 .input-container input{
